added links to header.ejs to user Material UI framework for styling

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../public/css/style.css"/>
     <script type="text/javascript" defer src="../../public/js/index.js"></script>
+    
+    <!-- Material UI links for styling -->
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script defer src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+
+    <!-- Google fonts link -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
     <title>Kev The Dev</title>
 </head>
 <body>
