--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,1 +1,3 @@
-<h1>Here are all the blog posts that i will make</h1> 
+<%- include('./partials/header.ejs') %>
+    <h1>Here are all the blog posts that i will make</h1> 
+<%- include('./partials/footer.ejs') %>
