--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,1 +1,3 @@
-<h1>Here is a Display of all my projects</h1>
+<%- include('./partials/header.ejs') %>
+    <h1>Here is a Display of all my projects</h1>
+<%- include('./partials/footer.ejs') %>
