added margin for main content changed text for other pages

--- a/styles/index.css
+++ b/styles/index.css
@@ -30,6 +30,11 @@ body {
     width: 1em;
     height: 1em;
 }
+/******* Main styling *******/
+main {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
 
 /******* Footer styling *******/
 footer {
