--- a/styles/index.css
+++ b/styles/index.css
@@ -57,20 +57,45 @@ footer {
 
 /******* Home styling *******/
 #home {
-    height: 70dvh;
+    height: 70vh;
+    height: 70svh;
     width: 100%;
     text-align: center;
 }
 
-#home > h1{
-    font-size: 2.5rem;
-    margin-bottom: 4rem;
+#home > div {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
-#home > p{
+#heading, #cursor {
+    font-size: 2.5rem;
+    display: inline;
+}
+
+#home > p {
     font-size: 1rem;
     font-style: italic;
     color: var(--lightPrimaryColor);
+}
+
+#cursor {
+    animation: blink 1s steps(1) infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+#home {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 /******* Home styling *******/
