--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,26 +1,27 @@
 .projects-row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    /* adjust the gap as per your design */
-    gap: 16px; 
-    /* adjust the padding as per your design */
-    padding: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 1rem; 
+  padding: 1rem;
 }
 
 .project-card {
-    background-color: red;
-    height: 100px;
-    width: 100px;
-    flex: 1 1 calc(25% - 16px);
-    max-width: calc(25% - 16px);
-    box-sizing: border-box;
-    margin-bottom: 16px;
+  background-color: var(--darkPrimaryColor);
+  border: 5px solid var(--lightPrimaryColor);
+  min-height: 25rem;
+  flex: 1 1 calc(25% - 1rem);
+  max-width: calc(25% - 1rem);
+  box-sizing: border-box;
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 768px) {
-    .project-card {
-      flex: 0 0 100%; /* on small screens take full width */
-      max-width: 100%;
-    }
+  .project-card {
+    flex: 0 0 80%; /* on small screens take full width */
+    min-height: 80dvh;
+    max-width: 100%;
+    margin: auto;
+    margin-bottom: 5rem;
   }
+}
