--- a/styles/projects.css
+++ b/styles/projects.css
@@ -7,13 +7,28 @@
 }
 
 .project-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   background-color: var(--darkPrimaryColor);
   border: 5px solid var(--lightPrimaryColor);
-  min-height: 25rem;
-  flex: 1 1 calc(25% - 1rem);
-  max-width: calc(25% - 1rem);
+  min-height: 30rem;
+  flex: 1 1 calc(33% - 1rem);
+  max-width: calc(33% - 1rem);
   box-sizing: border-box;
   margin-bottom: 1rem;
+  padding: 2rem;
+}
+
+.project-card > h6 {
+  font-size: 1.2rem;
+  align-self: flex-start;
+}
+
+.project-card > img {
+  width: 100%;
+  height: 10rem;
 }
 
 @media (max-width: 768px) {
@@ -23,5 +38,9 @@
     max-width: 100%;
     margin: auto;
     margin-bottom: 5rem;
+  }
+
+  .project-card > h6 {
+    align-self: flex-start;
   }
 }
