--- a/styles/projects.css
+++ b/styles/projects.css
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--darkPrimaryColor);
-  border-radius: 5px;
+  border-radius: 3rem;
   min-height: 80dvh;
   max-height: 80dvh;
   flex: 1 1 calc(33% - 3rem);
@@ -31,10 +31,16 @@
 .project-card > .project-image {
   width: 100%;
   height: 10rem;
+  padding: .5rem;
 }
 
 .project-card > .project-description {
-  font-size: 12px;
+  font-size: 16px;
+  max-height: 10rem;
+  min-height: 7rem;
+  overflow-y: auto;
+  padding: .5rem;
+
 }
 
 .project-card > .project-links {
@@ -46,10 +52,14 @@
 
 .project-card > .project-tools {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-between;
+  align-content: center;
+  flex-direction: column;
+  gap: .5rem; 
+  padding: .5rem;
   width: 100%;
+  max-height: 5rem;
+  min-height: 5rem;
 }
 
 @media (max-width: 768px) {
