--- a/styles/projects.css
+++ b/styles/projects.css
@@ -37,10 +37,34 @@
 .project-card > .project-description {
   font-size: 16px;
   max-height: 10rem;
-  min-height: 7rem;
+  min-height: 10rem;
   overflow-y: auto;
   padding: .5rem;
 
+}
+
+.project-card > .project-description::-webkit-scrollbar {
+  width: 10px;
+  background-color: var(--lightPrimaryColor);
+}
+
+.project-card > .project-description::-webkit-scrollbar-track {
+  background-color: var(--lightPrimaryColor);
+}
+
+.project-card > .project-description::-webkit-scrollbar-thumb {
+  background: #555; 
+  border-radius: 5px;
+}
+
+.project-card > .project-description::-webkit-scrollbar-thumb:hover {
+  background-color: var(--lightPrimaryColor);
+
+}
+
+.project-card > .project-description::-webkit-scrollbar-track:hover {
+  background-color: var(--lightPrimaryColor);
+  background: #555; 
 }
 
 .project-card > .project-links {
@@ -53,13 +77,25 @@
 .project-card > .project-tools {
   display: flex;
   flex-wrap: wrap;
-  align-content: center;
+  align-content: flex-start;
   flex-direction: column;
   gap: .5rem; 
   padding: .5rem;
   width: 100%;
   max-height: 5rem;
   min-height: 5rem;
+}
+
+.project-card > .project-tools li::before {
+  content: '•';
+  color: var(--primaryColor);
+  display: inline-block;
+  width: 1em;
+}
+
+.project-card > .project-tools > li {
+  width: 33%;
+  flex: 1 1 calc(5% - 3rem);
 }
 
 @media (max-width: 768px) {
